[tool.poetry]
name = "caffine-tracking"
version = "0.1.0"
description = ""
authors = ["EmmyCodes <emingram49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
Pint = "^0.19.2"
toolz = "^0.12.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
